<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crustacean.designation.schmoedownstats.activity.InnergeekdomDetailActivity">

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundtile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"

        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginEnd="75dp"
            android:layout_gravity="center"
            >

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/iv_competitor_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                app:srcCompat="@mipmap/applogolight"
                android:contentDescription="@string/cont_desc_competitor_image"
                />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/innergeekdom"
            android:background="@color/darkGrey"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingBottom="3dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/lightishGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rank"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_rectangle_top"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wins"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_rectangle_top"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/losses"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_rectangle_top"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kos"
                    android:gravity="center"
                    android:background="@drawable/rounded_rectangle_top"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/tv_rank"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:text="2"
                    android:background="@drawable/rounded_rectangle_bottom"
                    android:textColor="@color/darkGrey"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    />
                <TextView
                    android:id="@+id/tv_wins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="8"
                    android:background="@drawable/rounded_rectangle_bottom"
                    android:textColor="@android:color/holo_green_light"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    />
                <TextView
                    android:id="@+id/tv_losses"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="3"
                    android:background="@drawable/rounded_rectangle_bottom"
                    android:textColor="@android:color/holo_red_light"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    />
                <TextView
                    android:id="@+id/tv_kos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="1"
                    android:background="@drawable/rounded_rectangle_bottom"
                    android:textColor="@color/darkishGrey"
                    android:gravity="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                style="@style/statSection">

                <TextView
                    android:text="@string/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_name_label"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/darkerGrey"
                    android:layout_toRightOf="@+id/tv_name_label"
                    android:layout_toEndOf="@+id/tv_name_label"/>

                <View
                    android:id="@+id/name_divider"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/tv_name"
                    style="@style/divider"/>

                <TextView
                    android:text="@string/nickname_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_nickname_label"
                    android:layout_below="@+id/name_divider"/>

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/name_divider"
                    android:layout_toRightOf="@+id/tv_nickname_label"
                    android:layout_toEndOf="@+id/tv_nickname_label"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/darkerGrey"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                style="@style/statSection">

                <TextView
                    android:text="@string/current_belts_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_current_belts_label"/>

                <TextView
                    android:id="@+id/tv_current_belts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/tv_current_belts_label"
                    android:layout_toEndOf="@+id/tv_current_belts_label"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/darkerGrey"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

                <View
                    android:id="@+id/belt_divider"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/tv_current_belts"
                    style="@style/divider" />

                <TextView
                    android:text="@string/past_belts_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tv_past_belts_label"
                    android:layout_alignTop="@+id/tv_past_belts"/>

                <TextView
                    android:id="@+id/tv_past_belts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/belt_divider"
                    android:gravity="end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/darkerGrey"
                    android:layout_toRightOf="@+id/tv_past_belts_label"
                    android:layout_toEndOf="@+id/tv_past_belts_label"/>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>


